<resources>
    <string name="app_name">Ton-Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //fragment label
    <string name="label_app">Store</string>
    <string name="label_home">Home</string>
    <string name="label_catalog">Catalogo</string>
    <string name="label_last_arrived">Ultimi arrivi</string>
    <string name="label_offer">Offerte</string>
    <string name="label_search">Cerca</string>

    //drawer main
    <string name="menu_home">Store</string>


    <string name="home_second">Home Second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
